animation fixes for desktop and for menu foldin-foldout animations on mobile

--- a/output.css
+++ b/output.css
@@ -2361,10 +2361,6 @@ video {
   opacity: 0.1;
 }
 
-.opacity-100 {
-  opacity: 1;
-}
-
 .bg-blend-normal {
   background-blend-mode: normal;
 }
